[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "twardown_py"
version = "0.1.0"
description = "Python plugin for the Python Markdown ecosystem that provides an opinionated Markdown flavor"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Adam Twardoch", email = "adam@twardoch.com" },
]
dependencies = [
    "markdown>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/twardoch/twardown-py"
Repository = "https://github.com/twardoch/twardown-py.git"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/twardown_py"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
