[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "twardown_py"
version = "0.1.0"
description = "Python plugin for the Python Markdown ecosystem that provides an opinionated Markdown flavor"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Adam Twardoch", email = "adam@twardoch.com" },
]
dependencies = [
    "markdown>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/twardoch/twardown-py"
Repository = "https://github.com/twardoch/twardown-py.git"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "types-markdown>=3.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/twardown_py"]

[tool.pytest.ini_options]
addopts = "-ra -q --cov=twardown_py --cov-report=xml"
testpaths = ["tests"]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
