[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "twardown_py"
dynamic = ["version"]
description = "Python plugin for the Python Markdown ecosystem that provides an opinionated Markdown flavor"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Adam Twardoch", email = "adam@twardoch.com" },
]
keywords = ["markdown", "python-markdown", "extension", "gfm", "task-lists", "frontmatter"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "markdown>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/twardoch/twardown-py"
Repository = "https://github.com/twardoch/twardown-py.git"
Documentation = "https://twardoch.github.io/twardown-py/"
Issues = "https://github.com/twardoch/twardown-py/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "types-markdown>=3.5.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/twardown_py"]

[tool.hatch.envs.hatch-test]
extra-dependencies = [
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
addopts = "-ra -q --cov=twardown_py --cov-report=xml"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true
